syntax = "proto3";

import "google/protobuf/timestamp.proto";

package post;

service Post {
    rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
    rpc GetPost(GetPostRequest) returns (SinglePost);
    rpc CreatePost(CreatePostRequest) returns (SinglePost);
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
    rpc CheckExists(CheckExistsRequest) returns (CheckExistsResponse);
    rpc GetToken(GetTokenRequest) returns (GetTokenResponse);
}

message ListPostsRequest {
    int32 pageSize = 1;
    int32 pageNumber = 2;
}

message ListPostsResponse {
    repeated SinglePost posts = 1;
    int32 pageSize = 2;
    int32 pageNumber = 3;
}

message GetPostRequest {
    string uid = 1;
}

message SinglePost {
    string uid = 1;
    string title = 2;
    string url = 3;
    google.protobuf.Timestamp createdAt = 4;
    google.protobuf.Timestamp modifiedAt = 5;
}

message CreatePostRequest {
    string token = 1;
    string title = 2;
    string url = 3;
}

message UpdatePostRequest {
    string token = 1;
    string uid = 2;
    string title = 3;
    string url = 4;
}

message UpdatePostResponse {

}

message DeletePostRequest {
    string token = 1;
    string uid = 2;
}

message DeletePostResponse {

}

message CheckExistsRequest {
    string uid = 1;
}

message CheckExistsResponse {
    bool exists = 1;
}

message GetTokenRequest {
    string appId = 1;
    string appSecret = 2;
}

message GetTokenResponse {
    string token = 1;
}